# gpu_waiter

./: .gitignore  README.md  __init__.py  dedug.py  pyproject.toml
.github/workflows/: python-package.yml
src/: main.py
src/gpu_waiter/: __init__.py  main.py  tasker.py  waiter.py
src/gpu_waiter/device/: __init__.py  nv_query_gpu.txt
